@@ -2,6 +2,8 @@ ovirt-host-deploy -- oVirt host deploy
 
 ????-??-?? - Version 1.0.2
 
+ * vdsm: bridge: fix format typo when querying network manager, thanks to
+   Pascal Jakobi for reporting.
  * vdsm: vdsmid: do not attempt to install dmidecode on platforms other than
    x86.
  * vdsm: vdsmid: detect power cpu correctly.
